--- a/README.me
+++ b/README.me
@@ -5,7 +5,7 @@ Pasos para ejecutar el proyecto:
 1. Clonar repositorio
 2. Ejecutar dependencias ``npm install`` para reconstruir los modulos de node
 3. Ejecutar ``npm run dev`` para iniciar el servidor de desarrollo
-4. Abrir el navegador en ``localhost:3000``
+4. Abrir el navegador en ``http://localhost:3000``
 
 ## Producción
 
