--- a/README.me
+++ b/README.me
@@ -3,11 +3,11 @@
 Pasos para ejecutar el proyecto:
 
 1. Clonar repositorio
-2. Ejecutar dependencias ``npm install`` para reconstruir los modulos de node
-3. Ejecutar ``npm run dev`` para iniciar el servidor de desarrollo
-4. Abrir el navegador en ``http://localhost:3000``
+2. Ejecutar dependencias ```npm install``` para reconstruir los modulos de node
+3. Ejecutar ```npm run dev``` para iniciar el servidor de desarrollo
+4. Abrir el navegador en ```http://localhost:3000```
 
 ## Producción
 
-1. Ejecutar ``npm run build`` para generar el proyecto en la carpeta ``dist``
-2. Tomar la carpeta ``dist`` y desplegarla
+1. Ejecutar ```npm run build``` para generar el proyecto en la carpeta ``dist``
+2. Tomar la carpeta ```dist``` y desplegarla
